tests/fixtures/valid/loop_return.torel
unit fixtures.loop_return;

export proc main() -> Int32 {
    loop {
        return 42;
    }
}
