tests/fixtures/invalid/return_literal_mismatch.torel
unit fixtures.return_literal_mismatch;

export proc main() -> Exit {
    return 42;
}
